* Mon Dec 21 2020 Vishal Vijayraghavan <vishalvijayraghavan@gmail.com>
- Releasing liberation-fonts 2.1.2 version
- Resolves #25: liberation-fonts doesn't have proper <==> symbol
- Resolves #33: Liberation Mono: U+20BF is too wide
- Resolves #14: Liberation mono fonts are not recognized as monospace by fontconfig and cairo

* Wed Jun 03 2020 Vishal Vijayraghavan <vishalvijayraghavan@gmail.com>
- Releasing liberation-fonts 2.1.1 version
- Few more fixes to Bugzilla #1072095: Liberation Sans renders most Latin combining characters incorrectly

* Mon Feb 10 2020 Vishal Vijayraghavan <vishalvijayraghavan@gmail.com>
- Releasing liberation-fonts 2.1.0 version
- Updated release versioning scheme 
- Resolved Bugzilla #1072095: 	Liberation Sans renders most Latin combining characters incorrectly
- Resolved Pagure issue-11: 	Combining diaerasis below does not work except U 
- Resolved GitHub issue-19: 	Incorrect glyph name mapped to unicode
- Resolved Pagure issue-5: 	Incorrect glyph of Cent sign (U+00A2) in Sans and Mono style  
- Resolved Pagure issue-28 : 	U+25D2 and U+25D3 circle with lower / upper half black are backwards

* Mon Mar 4 2019 Vishal Vijayraghavan <vishalvijayraghavan@gmail.com>
- Releasing liberation-fonts 2.00.5 version
- Resolved issue-10: Improving lowercase Cyrillic glyps localized for Macedonian and Serbian, Patch fix by Dimitrij Mijoski
- Resolved #1014357: U+266B incorrect glyph with extra beam
-- Added two new glyphs U+266C and U+2669
- Resolved issue-13: COMBINING LONG SOLIDUS OVERLAY (U+0338) not centred on base character.
- Validated Missing Points at Extrema, Non-integral coordinates, Wrong Direction issues for newly added and existing glyphs  

* Mon Nov 05 2018 Vishal Vijayraghavan <vishalvijayraghavan@gmail.com>
- Releasing liberation-fonts 2.00.4 version, it includes few bug fixes and enhancements as follows:
-- Added Bitcoin sign #1533798 