@@ -26,6 +26,7 @@ endif
 
 EXPORTSCRIPT = scripts/fontexport.pe
 FONTTOOLSCRIPT = scripts/setisFixedPitch-fonttools.py
+FONTVERSION_UPDATE_SCRIPT = scripts/fontfile_version_update.py
 SCRIPTS      = $(EXPORTSCRIPT) scripts/sfd2ttf.pe scripts/ttf2sfd.pe
 MISCFILES    = AUTHORS ChangeLog LICENSE README.md TODO
 SRCDIR       = src
@@ -43,6 +44,9 @@ DISTPREFIX     := liberation-fonts-$(VER)
 DISTPREFIX_TTF := liberation-fonts-ttf-$(VER)
 SFDFILES       := $(addprefix $(SRCDIR)/$(NAME),    $(VARIANTS:=.sfd))
 TTFFILES       := $(addprefix $(EXPORTDIR)/$(NAME), $(VARIANTS:=.ttf))
+
+versionupdate:
+	$(PYTHON) $(FONTVERSION_UPDATE_SCRIPT) $(SRCDIR) $(VER)
 
 # keeping backward compatibility for "build"
 all build: ttf-dir
